# python-test

./: .coverage  .flake8  .gitignore  .readthedocs.yml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
src/python_test/: __init__.py  console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
