[tool.poetry]
name = "python-test"
version = "0.1.0"
description = "Test Python package"
license = "MIT"
readme = "README.md"
authors = ["Jonas Kersulis <kersulis@umich.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-cov = "^2.9.0"
coverage = {version = "^5.1", extras = ["toml"]}

[tool.poetry.scripts]
python-test = "python_test.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["python_test"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
